kubernetes/psql-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql-client
spec:
  containers:
    - name: client
      image: postgres:alpine
      command: ["/bin/sh"]
      args: ["-c", "while true; do sleep 3600; done"]
