kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: bohdansavshak
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: lari245/first-promotion-image:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: promotion

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: bohdansavshak
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32443
  type: NodePort
